# telegram_helper

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml  ruff.toml
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 2026_05_29_1739-7e1ced59ef63_admin_table.py  2026_05_31_1844-8bdd9c1f1b60_admin_and_clinets_tables.py  2026_06_02_1219-1b7fbeeb04c3_media_table.py
src/app_setup/: __init__.py  config.py
src/app_setup/middlewares/: active_users.py  admin_middleware.py  db_session.py
src/databases/postgres/: __init__.py  connection.py
src/databases/postgres/models/: admins.py  base.py  clients.py  media.py  meida.py
src/databases/postgres/repository/: base.py  clients.py  media.py
src/databases/redis/: __init__.py  connection.py
src/router/: __init__.py  main_router.py  promo_router.py
src/router/admin/: admin.py  crud_di.py  fms.py  keyboards.py
src/router/group/: router.py
src/router/users/: ai_di.py  ai_help_router.py  crud.py  help_router.py  promo_router.py  register_router.py
